# Cmake_example_2

./: CMakeLists.txt  README.md  main.cpp
log/: settings.txt
src/: rectangle.cpp  rectangle.h
test/: CMakeLists.txt  testRectangle.cpp
